[gd_scene load_steps=26 format=2]

[ext_resource path="res://Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Interface/SettingsContainer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Interface_scenes/btn_theme_style.tres" type="StyleBox" id=3]
[ext_resource path="res://sprites/Interface/lift_disable.png" type="Texture" id=4]
[ext_resource path="res://sprites/Interface/joystick/joystick_btn_enable.png" type="Texture" id=5]
[ext_resource path="res://sprites/Interface/checkbox/checkbox_pressed.png" type="Texture" id=6]
[ext_resource path="res://sprites/Interface/checkbox/checkbox_normal.png" type="Texture" id=7]
[ext_resource path="res://sprites/Interface/joystick/Joystick_bg.png" type="Texture" id=8]
[ext_resource path="res://sprites/Interface/lift_enable.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Interface_scenes/Extra_RL_lift.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/Interface/slider/slider_graber_normal.png" type="Texture" id=11]
[ext_resource path="res://sprites/Interface/slider/slider_graber_higjlight.png" type="Texture" id=12]
[ext_resource path="res://sprites/Interface/touch_btn_up_lift.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 55 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 55 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=5]
size = 10
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=8]
size = 10
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 6
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=10]
color = Color( 1, 1, 1, 0.392157 )
grow_begin = -1.0
grow_end = -3.0

[sub_resource type="StyleBoxLine" id=11]
color = Color( 1, 1, 1, 1 )
grow_begin = -1.0
grow_end = -3.0

[sub_resource type="StyleBoxLine" id=12]
color = Color( 1, 1, 1, 1 )
grow_begin = -1.0
grow_end = -3.0

[node name="SettingsContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_HUD" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Game_HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joystick" type="Sprite" parent="Game_HUD/Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 45, 20 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 8 )

[node name="joystick_button" type="TouchScreenButton" parent="Game_HUD/Control/joystick"]
pause_mode = 2
light_mask = 0
position = Vector2( -10, -10 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
shape = SubResource( 1 )

[node name="Extra_RL_lift" parent="Game_HUD/Control" instance=ExtResource( 10 )]
visible = false

[node name="TouchControls" type="Control" parent="Game_HUD"]
light_mask = 524288
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Game_HUD/TouchControls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -52.0
margin_right = 103.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right_touch" type="TouchScreenButton" parent="Game_HUD/TouchControls/Control2"]
light_mask = 0
position = Vector2( 60.2, 10.2 )
normal = ExtResource( 4 )
pressed = ExtResource( 9 )
shape = SubResource( 2 )
action = "right_lift"
visibility_mode = 1

[node name="Left_touch" type="TouchScreenButton" parent="Game_HUD/TouchControls/Control2"]
light_mask = 0
position = Vector2( 41.8, 10.2 )
rotation = 3.14159
scale = Vector2( 1, -1 )
normal = ExtResource( 4 )
pressed = ExtResource( 9 )
shape = SubResource( 3 )
action = "left_lift"
visibility_mode = 1

[node name="Sprite" type="Sprite" parent="Game_HUD/TouchControls/Control2"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 51, 12 )
texture = ExtResource( 13 )

[node name="Buttons" type="Control" parent="."]
margin_right = 106.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5262
margin_top = -73.5
margin_right = 39.4738
margin_bottom = 12.5
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenu" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 87.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Menu ->"

[node name="HSeparator" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 20.0
margin_right = 87.0
margin_bottom = 28.0
custom_constants/separation = 8

[node name="CheckBoxMusic" type="CheckBox" parent="Buttons/VBoxContainer"]
margin_top = 33.0
margin_right = 87.0
margin_bottom = 44.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 49.0
margin_right = 87.0
margin_bottom = 49.0
custom_constants/separation = -2

[node name="CheckBoxSFX" type="CheckBox" parent="Buttons/VBoxContainer"]
margin_top = 54.0
margin_right = 87.0
margin_bottom = 65.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
pressed = true
text = "SFX"

[node name="HSeparator3" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 70.0
margin_right = 87.0
margin_bottom = 70.0
custom_constants/separation = -2

[node name="Backfromlayout" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 75.0
margin_right = 87.0
margin_bottom = 90.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "<- Back"

[node name="HSeparator4" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 75.0
margin_right = 87.0
margin_bottom = 75.0
custom_constants/separation = -2

[node name="layoutbtn" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 80.0
margin_right = 87.0
margin_bottom = 95.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Layout of touch buttons"

[node name="CheckBoxExtraBTN" type="CheckBox" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 95.0
margin_right = 87.0
margin_bottom = 106.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Extra touch button"

[node name="HSeparator5" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 100.0
margin_right = 87.0
margin_bottom = 100.0
custom_constants/separation = -2

[node name="CheckBoxFlipH" type="CheckBox" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 111.0
margin_right = 87.0
margin_bottom = 122.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Flip horizontally"

[node name="BrightnessBTN" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 105.0
margin_right = 87.0
margin_bottom = 120.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Adjust brightness"
align = 0

[node name="HSeparator6" type="HSeparator" parent="Buttons/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 125.0
margin_right = 87.0
margin_bottom = 125.0
custom_constants/separation = -2

[node name="DefaultBrightnessBTN" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 130.0
margin_right = 87.0
margin_bottom = 145.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Default"
align = 0

[node name="HSeparator7" type="HSeparator" parent="Buttons/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 130.0
margin_right = 87.0
margin_bottom = 130.0
custom_constants/separation = -2

[node name="Label" type="Label" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 125.0
margin_right = 87.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 9 )
text = "Brightness:"

[node name="BSlider" type="HSlider" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 135.0
margin_right = 87.0
margin_bottom = 143.0
custom_icons/grabber_disabled = ExtResource( 11 )
custom_icons/grabber_highlight = ExtResource( 12 )
custom_icons/grabber = ExtResource( 11 )
custom_styles/slider = SubResource( 10 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 12 )
min_value = 0.3
max_value = 1.0
step = 0.001
value = 0.4

[node name="HSeparator8" type="HSeparator" parent="Buttons/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 148.0
margin_right = 87.0
margin_bottom = 148.0
custom_constants/separation = -2

[node name="Label2" type="Label" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 153.0
margin_right = 87.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 9 )
text = "Shadow opacity:"

[node name="ASlider" type="HSlider" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 163.0
margin_right = 87.0
margin_bottom = 171.0
custom_icons/grabber_disabled = ExtResource( 11 )
custom_icons/grabber_highlight = ExtResource( 12 )
custom_icons/grabber = ExtResource( 11 )
custom_styles/slider = SubResource( 10 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 12 )
max_value = 1.0
step = 0.001
value = 0.862
[connection signal="pressed" from="Buttons/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="toggled" from="Buttons/VBoxContainer/CheckBoxMusic" to="." method="_on_CheckBoxMusic_toggled"]
[connection signal="toggled" from="Buttons/VBoxContainer/CheckBoxSFX" to="." method="_on_CheckBoxSFX_toggled"]
[connection signal="pressed" from="Buttons/VBoxContainer/Backfromlayout" to="." method="_on_Backfromlayout_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/layoutbtn" to="." method="_on_layoutbtn_pressed"]
[connection signal="toggled" from="Buttons/VBoxContainer/CheckBoxExtraBTN" to="." method="_on_CheckBoxExtraBTN_toggled"]
[connection signal="toggled" from="Buttons/VBoxContainer/CheckBoxFlipH" to="." method="_on_CheckBoxFlipH_toggled"]
[connection signal="pressed" from="Buttons/VBoxContainer/BrightnessBTN" to="." method="_on_BrightnessBTN_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/DefaultBrightnessBTN" to="." method="_on_DefaultBrightnessBTN_pressed"]
